2008-07-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-dbus.c: 
	(tracker_dbus_query_result_to_hash_table): Fixed warning caused by
	uninitialized GValues.
	
2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (check_runtime_level): Fixed this
	function so it sets the daemon to readonly mode depending on
	battery use + config and if there is a reindex needed.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Make the message clearer as
	to why we are not running the crawler/indexer when in read only mode.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.h: Define TrackerHal as a void
	pointer if it is disabled and just don't use it anywhere, this is
	so function signatures can include it but it will be NULL where it
	is called. Can't think of a better way to do this really.
	
	* src/trackerd/tracker-crawler.[ch]:
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-processor.[ch]: Create TrackerHal in main
	again and pass it around the processor and crawler to use. It is
	need in main now to detect if we are using the laptop battery or
	not to put the daemon into readonly mode.

2008-07-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (index_metadata_foreach):
	Avoid a crash.

2008-07-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c: Fix typo.

2008-07-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c
	(get_account_name_from_imap_uri): Avoid potential invalid memory
	reads.
	(account_text_handler): Check that we're getting the right url tag
	contents.
	(get_imap_accounts): Avoid potential leaks.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-log.c: (log_output): Use
	g_strerror() and errno when we can't open the log file so we know
	why.
	